# miracle-wm

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  IDEAS.md  NOTES.md  README.md  RELEASING.md  ROADMAP.md  USERGUIDE.md  generate-comple-json.sh  run.sh
.github/workflows/: cmake.yml  fedora-rpm.yml  snap.yml  snap_publish.yml
debian/: changelog  control  copyright  files  rules
include/: jpcre2.h
miraclemsg/: CMakeLists.txt  README.md  ipc.h  ipc_client.cpp  ipc_client.h  main.cpp
rpm/: miracle-wm.spec
session/: LICENSE.sway-systemd  README.md
session/etc/systemd/user/: miracle-session-shutdown.target  miracle-session.target  miracle-xdg-autostart.target
session/usr/lib/systemd/user/: miracle-wm-session-shutdown.target  miracle-wm-session.target
session/usr/local/share/wayland-sessions/: miracle-wm-non-snap.desktop  miracle-wm-non-snap.desktop.in  miracle-wm-snap.desktop.in  miracle-wm.desktop  miracle-wm.desktop.in
snap/: snapcraft.yaml
snap/hooks/: install  post-refresh  remove
src/: FloatingWindowManager.cpp  FloatingWindowManager.hpp  TileNode.cpp  TileNode.hpp  TilingWindowManager.cpp  TilingWindowManager.hpp  WindowGroup.cpp  WindowGroup.hpp  animation_definition.cpp  animation_defintion.h  animator.cpp  animator.h  auto_restarting_launcher.cpp  auto_restarting_launcher.h  compositor_state.h  config.cpp  config.h  container.cpp  container.h  container_group_container.cpp  container_group_container.h  debug_helper.h  direction.h  display_listener.cpp  display_listener.h  feature_flags.h  floating_container.cpp  floating_container.h  floating_tree_container.cpp  floating_tree_container.h  floating_window_container.cpp  floating_window_container.h  i3_command.cpp  i3_command.h  i3_command_executor.cpp  i3_command_executor.h  immediate_renderer.cpp  immediate_renderer.h  ipc.cpp  ipc.h  (+113 more)
src/protocols/: xdg-shell-unstable-v6.xml  xdg-shell.xml  xdg_shell.c  xdg_shell.h  xdg_shell_unstable_v6.c  xdg_shell_unstable_v6.h
tests/: CMakeLists.txt  filesystem_configuration_test.cpp  miracle_config_test.cpp  stub_configuration.h  stub_session.h  stub_surface.h  stub_tiling_interface.h  test_animator.cpp  test_i3_command.cpp  tiling_window_tree_test.cpp  tree_test.cpp  window_tree_test.cpp
tests/ipc/: README.md  conftest.py  requirements.txt  test_change_workspace.py  test_get_tree.py  test_layout_command.py  test_move_command.py  test_send_tick.py  test_shutdown.py
tools/: check_license.py  clang-tidy.sh  publish-ppa.sh
wayland-protocols/: wlr-output-management-unstable-v1.xml
